--- a/views/events.hbs
+++ b/views/events.hbs
@@ -1,4 +1,4 @@
-<div class="event-module">
+<div class="event-module" id="{{eventbriteID}}">
   <div class="event-image" style="background-image: url({{image}})"></div>
   <h4 class="text event-date">{{start}}<br>{{promoter}}</h4>
   <h2 class="text event-artist">{{artists}}</h2>
