--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -3,7 +3,6 @@
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
   text-transform: center;
-  background-color: #EF4423;
 }
 
 .contact-section {
@@ -32,11 +31,10 @@ h3 {
   grid-column: 2 / 2;
   text-align: center;
   text-transform: uppercase;
-  font-family: Oswald;
+  font-family: "Oswald";
   font-size: 40px;
   font-weight: 600;
   padding-bottom: 10px;
-  border-bottom: black solid 3px;
 }
 
 /* imagery */
@@ -59,7 +57,9 @@ h3 {
 
 /* map */
 #map-container {
+  display: block;
   position: relative;
+  bottom: 50px;
   grid-column: 2 / 2;
   width: 100%;
   padding-top: 20px;
@@ -69,7 +69,7 @@ h3 {
 #map {
   width: 100%;
   height: 600px;
-  border: solid black 2px;
+  border: solid #ededed 2px;
   opacity: .95;
   filter: grayscale(100%);
 }
@@ -99,10 +99,11 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 100%;
+  color: #ededed;
 }
 
 #poc-title{
-  border-bottom: black 2px solid;
+  border-bottom: #ededed 2px solid;
 }
 
 .contact {
@@ -111,13 +112,11 @@ h3 {
 
 .dots {
   width: 100%;
-  border-bottom: dotted black 1px;
+  border-bottom: dotted #ededed 1px;
 }
 
 h5 {
   display: inline-block;
-  font-family: arial;
-  font-size: 16px;
 }
 
 h6 {
@@ -130,9 +129,8 @@ h6 {
 /* faq */
 #faq-container {
   grid-column: 2 / 2;
-  background-color: #EF4423;
   height: 200px;
-  margin: 50px 0px;
+  margin-bottom: 50px;
 }
 
 #question-text {
@@ -155,11 +153,12 @@ h6 {
 }
 
 .faq-item {
-  border-top: solid black 2px;
+  border-top: solid #ededed 2px;
 }
 
 .faq-text {
   font-family: arial;
+  color: #ededed;
 }
 
 .question-text {
@@ -196,11 +195,11 @@ h6 {
   display: block;
   width: 100%;
   height: 180px;
-  border: solid black 2px;
+  border: solid #ededed 2px;
   font-family: arial;
   font-size: 14px;
   padding: 10px;
-  background-color: #EF4423;
+  background-color: #111111;
   z-index: 1;
 }
 
@@ -208,5 +207,4 @@ h6 {
   display: block;
   margin: 20px auto;
   border-top: none;
-  border-bottom: solid black 1px;
 }
