--- a/public/styles/master.css
+++ b/public/styles/master.css
@@ -16,18 +16,35 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Open Sans", sans-serif;
-  background-color: #EF4423;
+  background-color: #111111;
+  filter: sepia(9%);
 }
 
 h1 {
   font-family: "Oswald";
   text-align: center;
   margin: 50px auto;
+  color: #ededed;
+  font-size: 48px;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-family: "Oswald";
+  text-align: center;
+  color: #ededed;
 }
 
 h4 {
   font-family: arial;
   font-size: 12px;
+  color: #ededed;
+}
+
+h5 {
+  font-family: arial;
+  font-size: 16px;
+  color: #ededed;
 }
 
 /* HEADER */
@@ -37,7 +54,7 @@ h4 {
   top: 0px;
   height: 50px;
   width: 100%;
-  background-color: #070707;
+  background-color: #111111;
   z-index: 20;
 }
 
@@ -378,14 +395,13 @@ h4 {
   letter-spacing: 1px;
   border: none;
   border-top: 1px solid #ededed;
-  border-bottom: 1px solid #111111;
-  color: #111111;
+  border-bottom: 1px solid #ededed;
+  color: #ededed  ;
   padding: 0;
   transition: color 0.3s, border-bottom 0.5s;
 }
 
 .submit-button:hover {
-  color: #EF4423;
   border-bottom: 1px solid #EF4423;
 }
 
@@ -405,4 +421,21 @@ h4 {
 
 .social-icon {
   margin: 12px 2px 0px 2px;
+}
+
+/* imagery */
+#pw-manhole-white {
+  display: block;
+  margin: 50px auto;
+}
+
+#grit {
+  position: fixed;
+  top: 0;
+  opacity: .3;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  z-index: 0;
+  pointer-events: none;
 }
