--- a/views/events.hbs
+++ b/views/events.hbs
@@ -4,6 +4,6 @@
   <h2 class="text event-artist">{{artists}}</h2>
   <h4 class="text event-room">{{room}}<h4>
   <h4 class="text event-price">{{price}}</h4>
-  <img class="barcode" src="./images/barcode.png" alt="barcode.png">
+  <img class="edit-button" src="./images/edit-button.svg" alt="edit-button.svg">
   <button class="button" id={{eventbriteID}} type="button">Get Tickets</button>
 </div>
