--- a/public/styles/events.css
+++ b/public/styles/events.css
@@ -1,195 +1,115 @@
 /* EVENTS */
 
+/* General */
 body {
   background-color: #111111;
   height: auto;
 }
 
-#event-container {
-  width: 100%;
-}
-
-#add-event-container {
-  text-align: center;
-}
-
 #event-list {
-  margin: auto;
-  width: 1000px;
+  position: relative;
+  transition: transform 1s;
+}
+
+/* Main Content */
+.main-content {
   height: 100%;
 }
 
-/* event module */
-.event-module {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 20px;
-  align-items: center;
-  width: 900px;
-  height: 240px;
-  border: #111111 solid 2px;
-  border-radius: 10px;
-  margin: 25px 50px;
-  padding: 15px 40px;
-  font-family: "Arial";
-  color: white;
-  background-color: #ededed;
-}
-
-.event-edit-module {
-  width: 900px;
-  height: 240px;
-  border: #111111 solid 2px;
-  border-radius: 10px;
+/* Add Event Button */
+#add-event-button {
+  display: block;
   margin: auto;
-  padding: 15px 40px;
-  font-family: "Arial";
-  color: white;
-  background-color: #ededed;
 }
 
-.event-submission-form {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 20px;
-  align-items: center;
+/* Event Module */
+.module-container {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 600px;
+  height: 314px;
+  border-radius: 5px;
+  margin: 50px auto;
+  filter: saturate(10%);
+  transition: filter .7s;
+  border: 2px solid #F0FCFC;
+}
+
+.module-container:hover {
+  filter: saturate(100%);
+}
+
+.event-text-area {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  height: 60px;
   width: 100%;
-  height: 100%;
+  background: rgba(17,17,17,0.5);
+  font-family: arial;
+  color: #F0FCFC;
 }
 
-.event-edit-form > input {
-  height: 25px;
+.date {
+  display: block;
+  font-family: courier;
+  font-size: 16px;
+  margin: 5px 10px;
 }
 
-.text {
-  color: #111111;
-}
-
-.event-promoter {
-  grid-row: 2 / 2;
-  grid-column: 2 / 4;
-
-}
-
-.event-artist {
-  text-shadow: 0 0 3px #ededed;
-  grid-row: 2 / 2;
-  grid-column: 2 / 4;
-}
-
-.edit-event-artist {
-  text-shadow: 0 0 3px #ededed;
-  grid-row: 2 / 2;
-  grid-column: 2 / 4;
-}
-
-.event-date {
-  grid-row: 1 / 1;
-  grid-column: 2 / 4;
-}
-
-.event-room {
-  grid-row: 3 / 3;
-  grid-column: 2 / 2;
-  text-align: left;
-}
-
-.edit-event-room {
-  grid-row: 3 / 3;
-  grid-column: 2 / 2;
-  text-align: left;
-  width: 120px;
+.headliner {
   display: inline-block;
-}
-
-.event-price {
-  grid-row: 3 / 3;
-  grid-column: 2 / 2;
-  text-align: right;
-}
-
-.edit-event-price {
-  grid-row: 3 / 3;
-  grid-column: 2 / 2;
-  text-align: right;
-  justify-self: right;
-  height: 20px;
-  width: 120px;
-}
-
-.event-image {
-  grid-row: 1 / 4;
-  grid-column: 1 / 1;
-  height: 100%;
-  filter: grayscale(100%);
-  background-position: center;
-  border-radius: 10px;
-}
-
-.edit-event-image {
-  grid-row: 1 / 4;
-  grid-column: 1 / 1;
-  height: 100%;
-  filter: grayscale(100%);
-  background-position: center;
-  border-radius: 10px;
-}
-
-.button {
-  grid-row: 3 / 3;
-  grid-column: 3 / 3;
-  background-color: #e8513a;
-  font-family: "Rajdhani";
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 1px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 5px 10px;
   text-transform: uppercase;
-  padding: 6px 12px;
+}
+
+.price {
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px 20px;
+}
+
+.buy-button {
+  position: absolute;
+  width: 140px;
+  height: 34px;
+  text-transform: uppercase;
+  background: #e8513a;
   border: none;
   border-radius: 5px;
-  color: black;
-  width: 225px;
-  justify-self: right;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+  color: #F0FCFC;
   transition: color 0.7s, background-color 0.1s;
-  z-index: 0;
+  filter: saturate(100%);
 }
 
-.button:hover {
+.buy-button:hover {
   color: #e8513a;
-  background-color: #070707;
+  background: #F0FCFC;
 }
 
-.edit-button {
-  grid-row: 1 / 1;
-  grid-column: 3 / 3;
-  justify-self: right;
-  height: 25px;
-  width: 25px;
-  border: none;
-  background-color: transparent;
-  background-image: url('../images/edit-button.svg');
-}
-
-.delete-button {
-  grid-row: 1 / 1;
-  grid-column: 3 / 3;
-  position: relative;
-  right: 35px;
-  justify-self: right;
-  height: 25px;
-  width: 25px;
-  border: none;
-  background-color: transparent;
-  background-image: url('../images/delete-button.svg');
-}
-
-edit-button > img {
-  width: 100%;
+/* Stamp */
+.stamp {
+  top: -80px;
+  left: 45%;
 }
 
 /* manhole */
 .manhole {
   margin-bottom: 15px;
+}
+
+/* Footer */
+.footer {
+  display: block;
+  position: static;
 }
