--- a/public/styles/master.css
+++ b/public/styles/master.css
@@ -92,17 +92,23 @@ h5 {
   border-bottom: 1px solid #EF4423;
 }
 
+/* MAIN CONTENT */
+.main-content {
+  position: relative;
+  height: 100vh;
+}
 
 /* FOOTER */
 .footer {
   width: 100%;
   text-align: center;
-  background-color: #ededed;
+  background-color: transparent;
   padding: 15px;
   height: 126px;
 }
 
 .footer-logo {
+  height: 20px;
   display: block;
   margin: auto;
 }
@@ -111,6 +117,7 @@ h5 {
   font-family: "Open Sans";
   font-size: 14px;
   font-weight: 400;
+  color: #ededed;
   text-transform: uppercase;
   letter-spacing: 2px;
   margin-top: 10px;
@@ -126,6 +133,20 @@ h5 {
 }
 
 /* imagery */
+.stamp {
+  width: 280px;
+  position: absolute;
+  filter: opacity(40%);
+}
+
+.background-image {
+  width: 100%;
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  filter: brightness(30%);
+}
+
 .manhole {
   width: 100px;
   display: block;
