--- a/public/styles/connect.css
+++ b/public/styles/connect.css
@@ -1,22 +1,4 @@
-/* CONTACT */
-
-.contact-section {
-  display: block;
-  margin: 20px auto;
-  width: 60%;
-}
-
-#contact-background-image {
-  position: fixed;
-  top: 0;
-  opacity: .22;
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  z-index: 0;
-  pointer-events: none;
-}
-
+/* General */
 h4 {
   font-family: 'Oswald';
   font-size: 22px;
@@ -33,68 +15,13 @@ h3 {
   padding-bottom: 10px;
 }
 
-/* imagery */
-.stamp {
-  top: 30px;
-  left: 48%;
-}
-
-#jackhammerkid {
+/* FAQs */
+#faq-container {
   display: block;
-  grid-column: 2 / 2;
-  justify-self: center;
-  width: 80px;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin: 20px auto;
+  width: 60%;
 }
 
-.manhole {
-  grid-column: 2 / 2;
-}
-
-#socials-flexbox-top {
-  display: inline-block;
-  grid-column: 2 / 2;
-  margin: auto;
-}
-
-/* points of contact */
-#poc-container {
-  grid-column: 2 / 2;
-}
-
-#poc-flexbox {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  color: #ededed;
-}
-
-#poc-title{
-  border-bottom: #ededed 2px solid;
-}
-
-.contact {
-  margin: 10px 0px;
-}
-
-.dots {
-  width: 100%;
-  border-bottom: dotted #ededed 1px;
-}
-
-h5 {
-  display: inline-block;
-}
-
-h6 {
-  float: right;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 200;
-}
-
-/* Faq */
 #faq-container {
   grid-column: 2 / 2;
   height: 200px;
@@ -139,4 +66,76 @@ h6 {
 
 .answer-box {
   display: none;
+}
+
+/* Contact Form */
+#contact-form-container {
+  width: 60%;
+  margin: auto;
+}
+
+#contact-form {
+  display: block;
+  margin: 0px auto 20px auto;
+  border: 2px solid #ededed;
+  border-radius: 5px;
+}
+
+#contact-form > select {
+  display: block;
+  margin: 20px;
+}
+
+#contact-form > textarea, input {
+  display: block;
+  color: #ededed;
+  font-family: Arial;
+  font-size: 14px;
+  margin: 20px;
+  background: transparent;
+  border: 2px solid #ededed;
+  border-radius: 5px;
+}
+
+#contact-form > p {
+  display: block;
+  margin: 20px;
+}
+
+#email-input {
+  width: calc(100% - 40px);
+  height: 30px;
+}
+
+#message-box {
+  width: calc(100% - 40px);
+  height: 100px;
+}
+
+.action-button {
+  display: block;
+  margin: 20px auto;
+}
+
+/* Imagery */
+#contact-background-image {
+  position: fixed;
+  top: 0;
+  opacity: .22;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  z-index: 0;
+  pointer-events: none;
+}
+
+#title-stamp {
+  position: absolute;
+  width: 280px;
+  top: -50px;
+  left: 48%;
+}
+
+.manhole {
+  grid-column: 2 / 2;
 }
