--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,11 +1,35 @@
-#welcome-to-public-works {
+#body {
+  position: relative;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+}
+
+#body-title {
   position: absolute;
-  top: 50%;
+  bottom: -20px;
   left: 50%;
-  transform: translate(-50%, -180%);
+  transform: translateX(-50%);
+}
+
+#body-outline {
+  height: 92%;
+  border: solid #ededed 4px;
+  border-radius: 20px;
+  margin: 20px;
 }
 
 .stamp {
   top: 35%;
   left: 50%;
 }
+
+/* #footer {
+  position: relative;
+  animation: showFooter 1s forwards;
+}
+
+@keyframes showFooter {
+  from { bottom: 0; }
+  to { bottom: 80px; }
+} */
