--- a/public/styles/master.css
+++ b/public/styles/master.css
@@ -1,6 +1,3 @@
-
-/* DOCUMENT */
-
 * {
   padding: 0;
   margin: 0;
@@ -17,7 +14,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Open Sans", sans-serif;
-  background-color: #141313;
+  background-color: #111111;
   filter: sepia(9%);
 }
 
@@ -28,6 +25,14 @@ h1 {
   color: #ededed;
   font-size: 48px;
   text-transform: uppercase;
+}
+
+h2 {
+  font-family: 'Arial';
+  font-size: 24px;
+  color: #ededed;
+  text-align: center;
+  margin: 25px;
 }
 
 h3 {
@@ -46,120 +51,35 @@ h5 {
   color: #ededed;
 }
 
-/* HEADER */
-
-#header {
-  position: fixed;
-  top: 0px;
-  height: 50px;
-  width: 100%;
-  background-color: #111111;
-  z-index: 20;
-}
-
-#header-spacer {
-  height: 50px;
-  width: 100%;
-}
-
-#nav-container {
-  float: right;
-  display: flex;
-  flex-direction: row-reverse;
-  height: 100%;
-  width: 55%;
-  align-items: center;
-}
-
-.nav-button {
-  height: 20px;
-  padding: 0px;
-  margin: 0px 50px;
-  font-family: "Rajdhani";
-  font-size: 14px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  color: white;
-  border: none;
-  border-top: 1px solid #131414;
-  border-bottom: 1px solid #131414;
-  background-color: transparent;
-  transition: border-bottom 0.3s;
-}
-
-.nav-button:hover {
-  border-top: 1px solid #141313;
-  border-bottom: 1px solid #EF4423;
-}
-
-/* MAIN CONTENT */
-.main-content {
-  position: relative;
-  height: 100vh;
-}
-
-/* FOOTER */
-.footer {
-  width: 100%;
-  text-align: center;
-  background-color: transparent;
-  padding: 15px;
-  height: 126px;
-}
-
-.footer-logo {
-  height: 20px;
-  display: block;
-  margin: auto;
-}
-
-.address {
-  font-family: "Open Sans";
-  font-size: 14px;
-  font-weight: 400;
+p {
+  font-family: arial;
+  font-size: 16px;
   color: #ededed;
+}
+
+/* Body */
+#body {
+  margin-bottom: 80px;
+}
+
+/* Action Button */
+.action-button {
+  width: 140px;
+  height: 34px;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-top: 10px;
+  background: #e8513a;
+  border: none;
+  border-radius: 5px;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  color: #F0FCFC;
+  transition: color 0.7s, background-color 0.1s;
+  filter: saturate(100%);
 }
 
-.socials-flexbox {
-  display: inline-block;
-  margin: auto;
-}
-
-.social-icon {
-  margin: 12px 2px 0px 2px;
-}
-
-/* imagery */
-.stamp {
-  width: 280px;
-  position: absolute;
-  filter: opacity(40%);
-}
-
-.background-image {
-  width: 100%;
-  z-index: -1;
-  position: fixed;
-  top: 0;
-  filter: brightness(30%);
-}
-
-.manhole {
-  width: 100px;
-  display: block;
-  margin: auto;
-}
-
-#grit {
-  position: fixed;
-  top: 0;
-  opacity: .3;
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  z-index: 0;
-  pointer-events: none;
+.action-button:hover {
+  color: #e8513a;
+  background: #F0FCFC;
 }
