--- a/public/styles/events.css
+++ b/public/styles/events.css
@@ -7,13 +7,14 @@
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 600px;
-  height: 314px;
-  border-radius: 5px;
-  margin: 50px auto;
+  background-position: center;
+  max-width: calc(100vw - 80px);
+  width: calc(600px * 1);
+  height: calc(314px * 1);
+  border-radius: 5px 5px 0px 0px;
+  margin: 120px auto;
   filter: saturate(10%);
   transition: filter .7s;
-  border: 2px solid #F0FCFC;
 }
 
 .module-container:hover {
@@ -50,31 +51,31 @@
   display: inline-block;
   font-size: 16px;
   margin: 5px 20px;
+  float: right;
 }
 
 .buy-button {
   position: absolute;
-  width: 140px;
-  height: 34px;
+  bottom: -40px;
+  display: block;
+  width: 100%;
+  height: 40px;
   text-transform: uppercase;
   background: #e8513a;
   border: none;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   font-family: 'Rajdhani', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   text-align: center;
-  bottom: 0;
-  right: 0;
-  margin: 10px;
-  color: #F0FCFC;
+  color: #111111;
   transition: color 0.7s, background-color 0.1s;
   filter: saturate(100%);
 }
 
 .buy-button:hover {
   color: #e8513a;
-  background: #F0FCFC;
+  background: #111111;
 }
 
 /* Stamp */
