--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -5,31 +5,126 @@
   background-size: cover;
 }
 
-#body-title {
-  position: absolute;
-  bottom: -20px;
-  left: 50%;
-  transform: translateX(-50%);
+.action-button {
+  display: block;
+  margin: auto;
+  width: 170px;
 }
 
-#body-outline {
-  height: 92%;
-  border: solid #ededed 4px;
-  border-radius: 20px;
-  margin: 20px;
-}
+
+/*! * * * * * * * * * * * * * * * * * * * *\
+  CSShake :: shake-little
+  v1.5.0
+  CSS classes to move your DOM
+  (c) 2015 @elrumordelaluz
+  http://elrumordelaluz.github.io/csshake/
+  Licensed under MIT
+\* * * * * * * * * * * * * * * * * * * * */
+
+@keyframes shake-little {
+  2% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  4% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  6% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  8% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  10% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  12% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  14% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  16% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  18% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  20% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  22% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  24% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  26% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  28% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  30% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  32% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  34% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  36% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  38% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  40% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  42% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  44% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  46% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  48% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  50% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  52% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  54% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  56% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  58% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  60% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  62% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  64% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  66% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  68% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  70% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  72% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  74% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  76% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  78% {
+    transform: translate(0px, 0px) rotate(0deg); }
+  80% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  82% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  84% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  86% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  88% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  90% {
+    transform: translate(0px, 1px) rotate(0deg); }
+  92% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  94% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  96% {
+    transform: translate(1px, 0px) rotate(0deg); }
+  98% {
+    transform: translate(1px, 1px) rotate(0deg); }
+  0%, 100% {
+    transform: translate(0, 0) rotate(0); } }
+
 
 .stamp {
   top: 35%;
   left: 50%;
 }
-
-/* #footer {
-  position: relative;
-  animation: showFooter 1s forwards;
-}
-
-@keyframes showFooter {
-  from { bottom: 0; }
-  to { bottom: 80px; }
-} */
