--- a/public/styles/master.css
+++ b/public/styles/master.css
@@ -74,12 +74,12 @@ p {
   font-size: 16px;
   font-weight: 600;
   text-align: center;
-  color: #F0FCFC;
+  color: #111111;
   transition: color 0.7s, background-color 0.1s;
   filter: saturate(100%);
 }
 
 .action-button:hover {
   color: #e8513a;
-  background: #F0FCFC;
+  background: #111111;
 }
