--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,16 +1,77 @@
 #body {
   position: relative;
-  height: 100vh;
-  background-position: center;
-  background-size: cover;
+  height: calc(100vh - 50px);
+  background: #e06736;
 }
 
-.action-button {
+#local161-logo {
   display: block;
-  margin: auto;
-  width: 170px;
 }
 
+#logo-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  max-width: 700px;
+  min-width: 300px;
+}
+
+.cross-thing {
+  width: 15px;
+  position: absolute;
+}
+
+#cross-thing-top {
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#cross-thing-bottom {
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#cross-thing-left {
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#cross-thing-right {
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#shake-container {
+  padding: 5px;
+}
+
+#action-button-home {
+  display: block;
+  color: #e06734;
+  background: #231f20;
+  width: 150px;
+  float: right;
+  margin: 5px;
+}
+
+#action-button-home:hover {
+  color: #231f20;
+  background: #e06734;
+  animation: shake-little infinite .2s;
+}
+
+#logo-stamp {
+  width: 100px;
+  position: absolute;
+  top: -40px;
+  right: -50px;
+}
 
 /*! * * * * * * * * * * * * * * * * * * * *\
   CSShake :: shake-little
@@ -23,108 +84,100 @@
 
 @keyframes shake-little {
   2% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   4% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   6% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   8% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   10% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   12% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   14% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   16% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   18% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   20% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   22% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   24% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   26% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   28% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   30% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   32% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   34% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   36% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   38% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   40% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   42% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   44% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   46% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   48% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   50% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   52% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   54% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   56% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   58% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   60% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   62% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   64% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   66% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   68% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   70% {
     transform: translate(1px, 0px) rotate(0.5deg); }
   72% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   74% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   76% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   78% {
-    transform: translate(0px, 0px) rotate(0deg); }
+    transform: translate(0px, 0px) rotate(0.5deg); }
   80% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   82% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   84% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   86% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   88% {
-    transform: translate(1px, 1px) rotate(0deg); }
+    transform: translate(1px, 1px) rotate(0.5deg); }
   90% {
-    transform: translate(0px, 1px) rotate(0deg); }
+    transform: translate(0px, 1px) rotate(0.5deg); }
   92% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   94% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   96% {
-    transform: translate(1px, 0px) rotate(0deg); }
+    transform: translate(1px, 0px) rotate(0.5deg); }
   98% {
-    transform: translate(1px, 1px) rotate(0deg); }
-  0%, 100% {
-    transform: translate(0, 0) rotate(0); } }
-
-
-.stamp {
-  top: 35%;
-  left: 50%;
-}
+    transform: translate(1px, 1px) rotate(0.5deg); }
