--- a/public/styles/master.css
+++ b/public/styles/master.css
@@ -12,7 +12,7 @@ html {
 body {
   position: absolute;
   width: 100%;
-  height: 100%;
+
   font-family: "Open Sans", sans-serif;
   background-color: #111111;
 }
@@ -62,6 +62,26 @@ p {
 }
 
 /* Action Button */
+.action-button-black {
+  width: 140px;
+  height: 34px;
+  text-transform: uppercase;
+  background: #111111;
+  border: none;
+  border-radius: 5px;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  color: #e06736;
+  transition: color 0.7s, background-color 0.1s;
+}
+
+.action-button-black:hover {
+  color: #111111;
+  background: #ededed;
+}
+
 .action-button {
   width: 140px;
   height: 34px;
