--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,3 +1,29 @@
 #about {
   overflow: hidden;
 }
+
+/* AboutDescription */
+#about-description {
+  background: #111111;
+  overflow: hidden;
+  padding: 40px 0;
+}
+
+#about-description svg {
+  display: block;
+  margin: 0 auto 40px auto;
+  width: 400px;
+}
+
+#about-description-text p {
+  display: block;
+  text-align: justify;
+  text-align-last: center;
+  text-justify: auto;
+  margin: 20px auto;
+  width: 40%;
+  color: #ededed;
+  text-transform: uppercase;
+  font-family: 'Rajdhani';
+  font-size: 14px;
+}
