--- a/client/src/styles/Carousel.css
+++ b/client/src/styles/Carousel.css
@@ -10,7 +10,7 @@
   height: 100%;
   width: 100vw;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   opacity: 1;
   transition: opacity 3s;
 }
