--- a/client/src/styles/Corporate.css
+++ b/client/src/styles/Corporate.css
@@ -4,27 +4,6 @@
   overflow: hidden;
 }
 
-/* Prompt */
-#prompt {
-  background: #e75e26;
-  height: 180px;
-  position: relative;
-}
-
-#prompt p {
-  font-family: 'Oswald';
-  font-size: 48px;
-  font-weight: 600;
-  color: #111111;
-  text-align: center;
-  text-transform: uppercase;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-}
-
 /* CorporateInfo */
 #corporate-info-container {
   position: relative;
@@ -134,9 +113,32 @@
   font-size: 24px;
   color: #ededed;
   text-transform: uppercase;
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
 }
 
 #form-instructions a {
+  color: #e75e26;
+  text-decoration-color: #e75e26;
+}
+
+/* FinalNote */
+#final-note {
+  margin: 40px;
+}
+
+#final-note h2 {
+  font-family: 'Oswald';
+  font-size: 24px;
+  color: #ededed;
+  text-transform: uppercase;
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
+}
+
+#final-note a {
   color: #e75e26;
   text-decoration-color: #e75e26;
 }
