--- a/client/src/styles/FAQ.css
+++ b/client/src/styles/FAQ.css
@@ -1,55 +1,32 @@
 #faq-container {
   display: block;
+  position: relative;
   margin: 20px auto;
   width: 60%;
-  grid-column: 2 / 2;
-  height: 200px;
   margin-bottom: 50px;
 }
 
-#faq-header {
+#faq-container h4 {
   font-family: 'Oswald';
   font-size: 22px;
   margin: 10px 0;
   color: white;
 }
 
-#question-text {
-  width: auto;
+.faq-item {
+  position: relative;
+  border-top: solid #ededed 2px;
+  margin: 20px auto;
+  cursor: pointer;
+}
+
+.faq-item p {
+  margin: 10px auto;
 }
 
 .dropdown-arrow {
   position: absolute;
-  top: -2px;
+  top: 5px;
   right: 0;
   height: 20px;
-}
-
-.question-box {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-content: space-between;
-}
-
-.faq-item {
-  border-top: solid #ededed 2px;
-}
-
-.faq-text {
-  font-family: arial;
-  color: #ededed;
-}
-
-.question-text {
-  font-weight: bold;
-}
-
-.text-container {
-  margin: 10px 0px 15px 0px;
-}
-
-.answer-box {
-  display: none;
 }
