--- a/client/src/styles/FeaturedEvent.css
+++ b/client/src/styles/FeaturedEvent.css
@@ -5,7 +5,7 @@
   height: 420px;
   border: 4px solid #ededed;
   padding: 15px;
-  margin: 0 15px;
+  margin: 20px 15px;
   color: #ededed;
   text-align: center;
   text-transform: uppercase;
