--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,27 +1,27 @@
+/* AboutStatement */
 #about-statement {
   position: relative;
-  height: 240px;
+  min-height: 240px;
   background: #ededed;
+  overflow: hidden;
 }
 
 #about-statement p {
   display: block;
   text-align: center;
-  position: relative;
-  top: 80px;
   font-family: 'Rajdhani';
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 600;
   max-width: 600px;
-  margin: auto;
+  margin: 0px auto 50px auto;
+  color: #111111;
 }
 
 #about-statement img {
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 150px;
-  opacity: .4;
+  bottom: 10px;
+  transform: translateX(-50%);
+  width: 40px;
 }
