--- a/client/src/styles/NewsletterSignUp.css
+++ b/client/src/styles/NewsletterSignUp.css
@@ -1,7 +1,7 @@
 #newsletter-sign-up {
   height: 180px;
   background: #ededed;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #newsletter-sign-up h2 {
@@ -9,6 +9,7 @@
   font-family: 'Oswald';
   font-weight: 600;
   font-size: 24px;
+  color: #111111;
   text-transform: uppercase;
   margin-top: 20px;
 }
@@ -24,6 +25,7 @@
   font-family: 'Rajdhani';
   text-transform: uppercase;
   font-size: 18px;
+  color: #111111;
 }
 
 #submit-button-newsletter {
