--- a/client/src/styles/Specs.css
+++ b/client/src/styles/Specs.css
@@ -1,63 +1,40 @@
-/* Specs */
 #specs {
   background: #111111;
   overflow: hidden;
 }
 
-/* SpecsHeader */
-#specs-header h1 {
-  margin: 20px;
-}
-
 /* SpecsInfo */
-#specs-info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  padding: 40px;
-  height: 150vw;
-  grid-row-gap: 40px;
-  grid-column-gap: 40px;
+.spec-paragraph {
+  text-align: justify;
+  width: 300px;
+  margin: 25px auto;
 }
 
-/* - Specs Text */
-.specs-text {
-  color: #ededed;
-  display: block;
-  margin: auto;
-}
-
-.specs-text h2 {
+#specs > h2 {
   font-family: 'Oswald';
-  font-size: 36px;
+  font-size: 24px;
   text-transform: uppercase;
-  margin-bottom: 40px;
+  text-align: center;
+  margin: 100px auto 50px auto;
 }
 
-.specs-text li {
+#specs > h3 {
+  margin: 25px auto;
+}
+
+#specs > h4 {
+  text-align: center;
+}
+
+#specs > ul {
+  text-align: just;
+  list-style-type: square;
+  width: 300px;
+  margin: 25px auto 50px auto;
   font-family: arial;
-  font-size: 18px;
-  list-style-position: inside;
-  margin-bottom: 20px;
+  color: #ededed;
 }
 
-#specs-text-1 {
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
-}
-
-#specs-text-2 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-#specs-text-3 {
-  grid-row: 3 / 4;
-  grid-column: 1 / 2;
-}
-
-/* - Specs Images */
-.specs-image {
-  background-position: center;
-  background-size: cover;
+#specs li {
+  margin-bottom: 15px;
 }
