--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,10 +1,10 @@
 #about {
+  background: #111111;
   overflow: hidden;
 }
 
 /* AboutDescription */
 #about-description {
-  background: #111111;
   overflow: hidden;
   padding: 40px 0;
 }
@@ -12,7 +12,7 @@
 #about-description svg {
   display: block;
   margin: 0 auto 40px auto;
-  width: 400px;
+  width: 300px;
 }
 
 #about-description-text p {
@@ -22,8 +22,39 @@
   text-justify: auto;
   margin: 20px auto;
   width: 40%;
+  min-width: 300px;
   color: #ededed;
   text-transform: uppercase;
   font-family: 'Rajdhani';
   font-size: 14px;
+}
+
+/* ClientLinks */
+#client-links {
+  display: flex;
+  flex-wrap: wrap;
+  background: red;
+}
+
+#client-links a {
+  flex-basis: 50%;
+  flex-grow: 1;
+  min-width: 300px;
+  height: 50vw;
+}
+
+#client-links button {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  filter: saturate(100%);
+  transition: filter .7s;
+}
+
+#client-links button:hover {
+  filter: saturate(0%);
 }
