--- a/client/src/styles/Carousel.css
+++ b/client/src/styles/Carousel.css
@@ -1,14 +1,12 @@
 #carousel-container {
   position: relative;
-  height: calc(100vh - 50px);
   overflow: hidden;
   background: #111111;
 }
 
 #image-container {
   position: relative;
-  height: 100%;
-  width: 100vw;
+  height: calc(100vw / (16 / 9));
   background-position: center;
   background-size: cover;
   opacity: 1;
@@ -16,7 +14,6 @@
 }
 
 /* Position Buttons */
-
 #circle-container {
   display: flex;
   position: absolute;
@@ -40,4 +37,38 @@
   cy: 10;
   r: 5;
   transition: fill 1s;
+}
+
+/* LastAnnounced */
+#last-announced {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  color: #ededed;
+  background: rgba(17, 17, 17, .5);
+  padding: 20px;
+}
+
+#last-announced h2 {
+  font-family: 'Oswald';
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+#last-announced h3 {
+  font-family: arial;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+#last-announced h4 {
+  font-family: courier;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+#last-announced p {
+  font-family: courier;
+  font-size: 14px;
 }
