--- a/client/src/styles/EventModule.css
+++ b/client/src/styles/EventModule.css
@@ -1,7 +1,7 @@
 .event-module-container {
   display: flex;
   flex-direction: row;
-  width: 60%;
+  width: 70%;
   height: 200px;
   margin: 40px auto;
   background: #111111;
@@ -21,16 +21,45 @@
   color: #ededed;
 }
 
-.event-module-button {
+.event-module-date {
+  font-family: 'Oswald';
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.event-module-promoter {
+  font-family: 'Rajdhani';
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.event-module-artists {
+  font-family: 'Oswald';
+  font-size: 26px;
+  text-transform: uppercase;
+}
+
+.event-module-text button {
   position: absolute;
   bottom: 0;
   right: 0;
   width: 100%;
   height: 30px;
-  background: #ef4423;
+  background: #e75e26;
   border: none;
   margin: 0;
   flex-grow: 1;
+  font-family: 'Rajdhani';
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: background-color .3s, color .7s;
+
+}
+
+.event-module-text button:hover {
+  background: #111111;
+  color: #e75e26;
 }
 
 @media (max-width: 800px) {
