--- a/client/src/styles/HeroImage.css
+++ b/client/src/styles/HeroImage.css
@@ -1,11 +1,14 @@
-#hero-image-container {
+#hero-image {
   position: relative;
-  height: calc(100vh - 50px);
-  background-position: center;
-  background-size: cover;
 }
 
-#hero-image-container > h1 {
+#hero-image > div {
+  height: calc(100vw / (16 / 9));
+  background-size: cover;
+  filter: opacity(80%);
+}
+
+#hero-image h1 {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -15,7 +18,7 @@
 }
 
 @media (max-width: 820px) {
-  #hero-image-container > h1 {
+  #hero-image > h1 {
     font-size: 50px;
   }
 }
