--- a/client/src/styles/ContactForm.css
+++ b/client/src/styles/ContactForm.css
@@ -1,5 +1,11 @@
 /* General */
+#contact-form-section {
+  position: relative;
+  height: 800px;
+}
+
 #contact-form-container {
+  position: relative;
   width: 60%;
   border: 2px #ededed solid;
   border-radius: 5px;
@@ -54,6 +60,7 @@ form {
 form input, textarea {
   display: block;
   background: none;
+  color: #ededed;
   border: 1px #ededed solid;
   border-radius: 5px;
   width: 100%;
@@ -63,9 +70,10 @@ form input {
   height: 25px;
   margin-top: 10px;
   margin-bottom: 40px;
+  color: #ededed;
 }
 
 form button {
   display: block;
-  margin: auto;
+  margin: 20px auto;
 }
