--- a/client/src/styles/EventModule.css
+++ b/client/src/styles/EventModule.css
@@ -6,17 +6,20 @@
   display: flex;
   flex-direction: row;
   width: 70%;
-  height: 200px;
-  margin: 80px auto;
+  height: 250px;
+  margin: 100px auto;
   background: #111111;
+  cursor: pointer;
 }
 
 .event-module-image {
   width: 250px;
-  height: 200px;
+  height: 250px;
   min-width: 250px;
   min-height: 200px;
   margin-right: 20px;
+  border: 3px #ededed solid;
+  border-radius: 5px;
 }
 
 .event-module-text {
@@ -41,29 +44,6 @@
   font-family: 'Oswald';
   font-size: 26px;
   text-transform: uppercase;
-}
-
-.event-module-text button {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 30px;
-  background: #e75e26;
-  border: none;
-  margin: 0;
-  flex-grow: 1;
-  font-family: 'Rajdhani';
-  font-size: 18px;
-  font-weight: 600;
-  text-transform: uppercase;
-  transition: background-color .3s, color .7s;
-
-}
-
-.event-module-text button:hover {
-  background: #111111;
-  color: #e75e26;
 }
 
 @media (max-width: 800px) {
