--- a/client/src/styles/FeaturedEvents.css
+++ b/client/src/styles/FeaturedEvents.css
@@ -9,20 +9,25 @@
 #view-all-events {
   display: block;
   text-align: center;
+  margin: 40px auto;
 }
+
+
 
 /* FeaturedEvent */
 .featured-event {
   position: relative;
   width: 270px;
   min-width: 270px;
-  height: 420px;
-  border: 4px solid #ededed;
+  height: 550px;
+  border: 3px solid #ededed;
+  border-radius: 5px;
   padding: 15px;
   margin: 20px 15px;
   color: #ededed;
   text-align: center;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .featured-event-image {
@@ -63,4 +68,24 @@
 .event-button:hover {
   background-color: #111111;
   color: #e75e26;
+}
+
+.button-underline {
+  font-family: 'Rajdhani';
+  font-size: 24px;
+  text-transform: uppercase;
+  border: none;
+  background: none;
+  color: #ededed;
+  margin: 20px auto;
+  letter-spacing: .1em;
+  border-top: 1px solid #111111;
+  border-bottom: 1px solid #111111;
+  transition: color .3s, border-bottom .7s;
+}
+
+.button-underline:hover {
+  color: #ff5524;
+  border-top: 1px solid #111111;
+  border-bottom: 1px solid #ff5524;
 }
