--- a/client/src/styles/Marquee.css
+++ b/client/src/styles/Marquee.css
@@ -1,10 +1,11 @@
 #marquee {
   position: relative;
-  height: 180px;
+  height: 140px;
   background: #e75e26;
   white-space: nowrap;
   overflow: hidden;
   transition: background-color .3s;
+  cursor: pointer;
 }
 
 .marquee-text {
