--- a/client/src/styles/PrivateEvents.css
+++ b/client/src/styles/PrivateEvents.css
@@ -2,57 +2,51 @@
   background: #111111;
 }
 
-#private-events-info > div {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 20px;
-}
-
-.private-events-text {
-  flex-basis: 50%;
-  flex-grow: 1;
-  padding: 20px;
-}
-
-.private-events-text h2 {
+#private-events-info h2 {
   font-family: 'Oswald';
   font-size: 24px;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  width: 60%;
+  margin: 40px auto;
+  text-align: center;
 }
 
-.private-events-text p {
-  font-size: 14px;
-  margin-bottom: 20px;
+#private-events-info p {
+  font-size: 16px;
+  margin: 40px auto;
   line-height: 2em;
+  width: 60%;
+  text-align: center;
+  display: block;
 }
 
-.private-events-text li {
+#private-events-info ul {
+  display: block;
+  width: 60%;
+  margin: 40px auto;
+}
+
+#private-events-info li {
   font-family: arial;
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 15px;
   margin-bottom: 10px;
   color: #ededed;
+  line-height: 2em;
 }
 
-.private-events-images {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 50%;
-  flex-grow: 1;
-  min-width: 300px;
-}
-
-.private-events-images img {
+#private-events-info img {
   display: block;
-  width: 100%;
-  margin-bottom: 20px;
+  margin: auto;
+  border: 3px #ededed solid;
+  border-radius: 5px;
+  width: 60%;
 }
 
 /* FormInstructions */
 #form-instructions {
-  margin: 40px 20px;
+  width: 60%;
+  margin: 80px auto;
 }
 
 #form-instructions h2 {
@@ -68,7 +62,8 @@
 
 /* FinalNote */
 #final-note {
-  margin: 40px 20px;
+  width: 60%;
+  margin: 80px auto;
 }
 
 #final-note h2 {
