--- a/client/src/styles/Connect.css
+++ b/client/src/styles/Connect.css
@@ -4,26 +4,27 @@
 }
 
 #newsletter-text {
-  background: #111111;
+  background: #ededed;
   padding: 40px auto;
   overflow: hidden;
+  box-shadow: 20px;
 }
 
 #newsletter-text h1 {
   margin: 40px;
-  color: #ededed;
+  color: #111111;
 }
 
 #newsletter-text p {
   display: block;
-  color: #ededed;
+  color: #111111;
   font-family: 'Rajdhani';
   font-size: 18px;
   font-weight: 600;
-  text-align: left;
+  text-align: center;
   width: 60%;
   margin: 20px auto;
-  background: #111111;
+  background: #ededed;
 }
 
 #newsletter-text input {
@@ -31,11 +32,11 @@
   margin: 40px auto;
   width: 300px;
   height: 30px;
-  border: 1px #ededed solid;
+  border: 1px #111111 solid;
   background: none;
   text-align: center;
   font-family: 'Rajdhani';
   text-transform: uppercase;
   font-size: 18px;
-  color: #ededed;
+  color: #111111;
 }
