--- a/client/src/styles/FAQ.css
+++ b/client/src/styles/FAQ.css
@@ -6,22 +6,36 @@
   margin-bottom: 50px;
 }
 
+@media (max-width: 700px) {
+ #faq {
+   width: 100%;
+   padding: 0px 40px;
+ }
+}
+
 #faq h4 {
   font-family: 'Oswald';
-  font-size: 22px;
+  font-size: 48px;
   margin: 10px 0;
   color: white;
 }
 
 .faq-item {
+  text-transform: uppercase;
   position: relative;
   border-top: solid #ededed 2px;
   margin: 20px auto;
   cursor: pointer;
 }
 
+.faq-question {
+  font-size: 24px;
+}
+
 .faq-item p {
+  font-family: 'Rajdhani';
   margin: 10px auto;
+  padding-right: 15px;
 }
 
 .dropdown-arrow {
