--- a/client/src/styles/PrivateEvents.css
+++ b/client/src/styles/PrivateEvents.css
@@ -4,37 +4,81 @@
 
 #private-events-info h2 {
   font-family: 'Oswald';
-  font-size: 24px;
+  font-size: 48px;
+  letter-spacing: -1px;
   text-transform: uppercase;
   width: 60%;
-  margin: 40px auto;
+  margin: 80px auto 40px auto;
   text-align: center;
+}
+
+@media (max-width: 700px) {
+  #private-events-info h2 {
+    width: 100%;
+    padding: 0px 40px;
+  }
 }
 
 #private-events-info p {
-  font-size: 16px;
-  margin: 40px auto;
-  line-height: 2em;
-  width: 60%;
-  text-align: center;
   display: block;
+  text-align: justify;
+  text-align-last: center;
+  text-justify: auto;
+  line-height: 150%;
+  margin: 0 auto 80px auto;
+  width: 70%;
+  color: #ededed;
+  text-transform: uppercase;
+  font-family: 'Rajdhani';
+  font-size: 28px;
+}
+
+@media (max-width: 700px) {
+  #private-events-info p {
+    font-size: 18px;
+    width: calc(100% - 40px);
+    margin: 40px auto;
+    padding: 0px 40px;
+  }
 }
 
 #private-events-info ul {
-  display: block;
+  display: flex;
+  flex-direction: row;
   width: 60%;
-  margin: 40px auto;
-  text-align: center;
+  margin: 40px auto 80px auto;
+  text-align: left;
+}
+
+@media (max-width: 700px) {
+  #private-events-info ul {
+    display: block;
+    width: calc(100% - 40px);
+    padding: 0px 40px;
+  }
+}
+
+#private-events-info ul div {
+  margin-right: 60px;
+  position: relative;
+  left: 45px;
+}
+
+@media (max-width: 700px) {
+  #private-events-info ul div {
+    left: 0px;
+    margin: 0px;
+  }
 }
 
 #private-events-info li {
-  font-family: arial;
-  font-size: 16px;
+  font-family: 'Rajdhani';
+  font-size: 20px;
   margin-left: 15px;
   margin-bottom: 20px;
   color: #ededed;
-  line-height: 2em;
-  list-style: none;
+  line-height: 115%;
+  list-style-type: square;
 }
 
 .private-events-image {
@@ -50,10 +94,19 @@
   margin: 80px auto;
 }
 
+@media (max-width: 700px) {
+  #form-instructions {
+    width: 100%;
+    padding: 0px 40px;
+  }
+}
+
 #form-instructions h2 {
   font-family: 'Oswald';
-  font-size: 24px;
+  font-size: 30px;
   text-transform: uppercase;
+  text-align: center;
+  line-height: 150%;
 }
 
 #form-instructions a {
@@ -69,11 +122,19 @@
 
 #final-note h2 {
   font-family: 'Oswald';
-  font-size: 24px;
+  font-size: 18px;
+  line-height: 175%;
   text-transform: uppercase;
+  text-align: center;
 }
 
 #final-note a {
   color: #e75e26;
   text-decoration-color: #e75e26;
+}
+
+#final-note img {
+  display: block;
+  margin: 80px auto;
+  width: 100px;
 }
