--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -12,21 +12,42 @@
 #about-description svg {
   display: block;
   margin: 0 auto 40px auto;
-  width: 300px;
 }
 
-#about-description-text p {
+#about-description p {
   display: block;
   text-align: justify;
   text-align-last: center;
   text-justify: auto;
-  margin: 20px auto;
-  width: 40%;
+  line-height: 150%;
+  margin: 80px auto;
+  padding: 0px 40px;
   min-width: 300px;
+  max-width: 900px;
   color: #ededed;
   text-transform: uppercase;
   font-family: 'Rajdhani';
-  font-size: 14px;
+  font-size: 28px;
+}
+
+@media (max-width: 700px) {
+  #about-description p {
+    font-size: 18px;
+    margin: 40px auto;
+  }
+}
+
+#about-description img {
+  display: block;
+  margin: 80px auto;
+  width: 100px;
+}
+
+.about-description-image {
+  background-position: center;
+  background-size: cover;
+  height: 50vw;
+  opacity: .75;
 }
 
 /* ClientLinks */
@@ -34,6 +55,13 @@
   display: flex;
   flex-wrap: wrap;
   background: red;
+}
+
+@media (max-width: 1200px) {
+  #client-links h1 {
+    font-size: 36px;
+    letter-spacing: 0px;
+  }
 }
 
 #client-links a {
