--- a/client/src/styles/EventModule.css
+++ b/client/src/styles/EventModule.css
@@ -1,36 +1,41 @@
-.event-module-link {
-  text-decoration: none;
-}
 
+/* Container */
 .event-module-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 70%;
-  height: 250px;
   margin: 100px auto;
   background: #111111;
   cursor: pointer;
 }
 
+@media (max-width: 700px) {
+  .event-module-container {
+    width: calc(100% - 80px);
+    margin: 100px 40px;
+  }
+}
+
+/* Top */
+.event-module-top {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
 .event-module-image {
-  width: 250px;
-  height: 250px;
-  min-width: 250px;
-  min-height: 200px;
+  width: 100%;
   margin-right: 20px;
-  border: 3px #ededed solid;
-  border-radius: 5px;
 }
 
 .event-module-text {
-  position: relative;
-  flex-grow: 1;
+  margin: 20px 0px;
   color: #ededed;
 }
 
 .event-module-date {
   font-family: 'Oswald';
-  font-size: 20px;
+  font-size: 24px;
   text-transform: uppercase;
 }
 
@@ -42,14 +47,18 @@
 
 .event-module-artists {
   font-family: 'Oswald';
-  font-size: 26px;
+  font-size: 30px;
   text-transform: uppercase;
 }
 
-@media (max-width: 800px) {
-  .event-module-container {
-    flex-direction: column;
-    width: 250px;
-    height: 470px;
-  }
+/* Bottom */
+.event-module-bottom {
+  position: relative;
+  height: 20px;
+  grid-row: 2 / 3;
+}
+
+/* Misc */
+.event-module-link {
+  text-decoration: none;
 }
