--- a/client/src/styles/FeaturedEvents.css
+++ b/client/src/styles/FeaturedEvents.css
@@ -1,8 +1,4 @@
 #featured-events-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
   background: #111111;
 }
 
@@ -18,7 +14,6 @@
   width: 270px;
   min-width: 270px;
   height: 550px;
-  border: 3px solid #ededed;
   border-radius: 5px;
   padding: 15px;
   margin: 20px 15px;
@@ -26,6 +21,7 @@
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
+  line-height: 150%;
 }
 
 .featured-event-image {
@@ -42,7 +38,7 @@
 
 .featured-event-date {
   font-family: 'Rajdhani';
-  margin: 15px;
+  margin: 15px 0px ;
 }
 
 .event-button {
