--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -3,7 +3,7 @@
   background: #111111;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  font-family: 'Arial';
+  font-family: 'Rajdhani';
   color: #ededed;
 }
 
@@ -14,6 +14,7 @@
 
 /* Footer Grid Boxes */
 #footer-about {
+  font-family: "Rajdhani";
   grid-column: 1;
 }
 
@@ -42,6 +43,7 @@
 }
 
 .footer-text {
+  font-family: 'Rajdhani';
   display: block;
   margin-bottom: 20px;
   font-size: 12px;
@@ -84,6 +86,7 @@
 
 /* Byline */
 #footer-byline {
+  font-family: 'Rajdhani';
   display: block;
   margin-left: 60px;
   padding-bottom: 20px;
@@ -94,8 +97,8 @@
   padding-bottom: 30px;
 }
 
-#by {
-  font-size: 10px;
+.by {
+  font-size: 14px;
   margin-bottom: 30px;
   text-decoration: none;
   color: #ededed;
