--- a/client/src/styles/HeroImage.css
+++ b/client/src/styles/HeroImage.css
@@ -10,10 +10,11 @@
 
 #hero-image h1 {
   position: absolute;
+  font-size: 70px;
+  letter-spacing: -2px;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 100px;
   margin-bottom: 40px;
 }
 
