--- a/client/src/styles/InTheWorks.css
+++ b/client/src/styles/InTheWorks.css
@@ -6,3 +6,10 @@
 #in-the-works h1 {
   margin: 40px auto;
 }
+
+@media (max-width: 700px) {
+  #in-the-works h1 {
+    font-size: 56px;
+    letter-spacing: 0px;
+  }
+}
