--- a/client/src/styles/Marquee.css
+++ b/client/src/styles/Marquee.css
@@ -13,7 +13,8 @@
   top: 50%;
   left: 100vw;
   font-family: 'Oswald';
-  font-size: 100px;
+  font-size: 90px;
+  letter-spacing: -4px;
   color: #111111;
   text-transform: uppercase;
   margin: 0;
