--- a/client/src/styles/Specs.css
+++ b/client/src/styles/Specs.css
@@ -5,14 +5,35 @@
 
 /* SpecsInfo */
 .spec-paragraph {
+  display: block;
   text-align: justify;
-  width: 300px;
-  margin: 25px auto;
+  text-align-last: center;
+  text-justify: auto;
+  line-height: 150%;
+  margin: 0 auto 20px auto;
+  max-width: 700px;
+  padding: 0px 40px;
+  color: #ededed;
+  text-transform: uppercase;
+  font-family: 'Rajdhani';
+  font-size: 18px;
+}
+
+#specs h1 {
+  margin: 80px auto;
+}
+
+@media (max-width: 700px) {
+  #specs h1 {
+    font-size: 46px;
+    letter-spacing: -1px;
+  }
 }
 
 #specs > h2 {
   font-family: 'Oswald';
-  font-size: 24px;
+  font-size: 48px;
+  letter-spacing: -1px;
   text-transform: uppercase;
   text-align: center;
   margin: 100px auto 50px auto;
@@ -23,18 +44,56 @@
 }
 
 #specs > h4 {
+  font-family: 'Rajdhani';
+  font-size: 36px;
   text-align: center;
+  text-decoration: underline;
 }
 
 #specs > ul {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
   text-align: just;
   list-style-type: square;
-  width: 300px;
   margin: 25px auto 50px auto;
   font-family: arial;
   color: #ededed;
 }
 
+#specs ul div {
+  width: 50%;
+  padding-right: 40px;
+}
+
 #specs li {
-  margin-bottom: 15px;
+  font-family: 'Rajdhani';
+  font-size: 20px;
+  margin-left: 15px;
+  margin-bottom: 20px;
+  color: #ededed;
+  line-height: 150%;
+  position: relative;
+  left: 40px;
+}
+
+@media (max-width: 900px) {
+  #specs > h2 {
+    font-size: 36px;
+  }
+
+  #specs ul {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #specs li {
+    left: 0px;
+  }
+
+  #specs ul div {
+    width: 100%;
+    padding: 0px 40px;
+  }
 }
