--- a/client/src/styles/TypeLogo.css
+++ b/client/src/styles/TypeLogo.css
@@ -29,8 +29,14 @@
   stroke: #ededed;
   stroke-width: 0.25;
   stroke-miterlimit: 1;
-  width: 200px;
+  width: 500px;
   margin: 40px auto;
+}
+
+@media (max-width: 700px) {
+  .typelogo-about {
+    width: 300px;
+  }
 }
 
 .typelogo-white {
